Refactored to work with Cy3
git-svn-id: http://chianti.ucsd.edu/svn@27257 0ecc0d97-ab19-0410-9704-bfe1a75892f5